@@ -1,3 +1,8 @@
+2001-04-13  Larry Ewing  <lewing@ximian.com>
+
+	* htmlengine.c (parse_f): make sure we don't hold two references
+	to the color.
+
 2001-04-12  Dan Winship  <danw@ximian.com>
 
 	* htmlengine.c (parse_iframe): Don't leak.
